# ascii_wanderer

./: .gitignore  Cargo.toml  Trunk.toml  ascii_wanderer-4c7085be80ad4f48.js  ascii_wanderer-4c7085be80ad4f48_bg.wasm  ascii_wanderer-50be34ffaae8d175.js  ascii_wanderer-50be34ffaae8d175_bg.wasm  index.html
.github/workflows/: main.yml
docs/: ascii_wanderer-96b644f252480310_bg.wasm  index.html  style-bb0a4127f5a4578d.css
src/: gamearea.rs  main.rs
src/gamearea/: arena.rs  popups.rs
